--- a/page/home/pages/terminalUser/toBeCommentOrderDetail/toBeCommentOrderDetail.wxss
+++ b/page/home/pages/terminalUser/toBeCommentOrderDetail/toBeCommentOrderDetail.wxss
@@ -1,3 +1,9 @@
+
+.comment_title {
+  margin:15rpx;
+  display: flex;
+  font-size: 30rpx;
+}
 .comment1-description {
   padding: 30rpx 0;
   display: flex;
@@ -29,10 +35,4 @@ image{
   height: 60rpx;
   width: 60rpx;
   display: inline-block
-}
-
-.star_view {
-  margin-top:30px;
-  margin-left: 10rpx;
-  font-size: 40rpx;
 }
