--- a/page/home/pages/terminalUserManager/toBePay/toBePay.wxml
+++ b/page/home/pages/terminalUserManager/toBePay/toBePay.wxml
@@ -1,3 +1,4 @@
+<import src="../../../../common/modal/modal-tpl.wxml" />
 <view class="page">
   <view class="page__bd">
     <!-- bindscrolltolower="lower"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" -->
@@ -20,3 +21,6 @@
     </scroll-view>
   </view>
 </view>
+
+  <template is="bill" data="{{showBill,totalMoney}}">
+  </template>
