--- a/page/home/pages/terminalUserManager/toBePayDetail/toBePayDetail.wxml
+++ b/page/home/pages/terminalUserManager/toBePayDetail/toBePayDetail.wxml
@@ -44,10 +44,10 @@
 <view class="ctnt3 placehold" hidden="{{currentNavtab==3 ? '' : true}}">
   <view class="page__bd">
     <mp-cells ext-class="my-cells">
-      <mp-cell value="服务商" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
-      <mp-cell value="维修工" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
-      <mp-cell value="维修建议" footer="{{orderInfo.suggestion}}">{{orderInfo.suggestion}}</mp-cell>
-      <mp-cell value="维修结果" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
+      <mp-cell value="备品备件" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
+      <mp-cell value="备品备件" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
+      <mp-cell value="备品备件" footer="{{orderInfo.suggestion}}">{{orderInfo.suggestion}}</mp-cell>
+      <mp-cell value="备品备件" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
     </mp-cells>
   </view>
 </view>
