--- a/page/message/index.wxml
+++ b/page/message/index.wxml
@@ -1,6 +1,6 @@
 <!--pages/message/message.wxml-->
 <view class="top-tab flex-wrp flex-tab">
-  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:key="item" bindtap="switchTab">
+  <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:for-index="idx" wx:key="item" data-idx="{{idx}}" bindtap="switchTab">
     {{item}}
   </view>
 </view>
@@ -24,6 +24,9 @@
         <text class="notify-title">C#如何在不覆盖原有文件的情况下直接修改某一部分的内容？</text>
       </view>
     </view>
+  </view>
+
+  <view class="ctnt0" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="notify-item flex-wrp">
       <view class="avatar flex-item">
         <image src="/imgs/icon/ananops.png"></image>
@@ -33,15 +36,8 @@
         <text class="notify-title">C#如何在不覆盖原有文件的情况下直接修改某一部分的内容？</text>
       </view>
     </view>
-    <view class="notify-item flex-wrp">
-      <view class="avatar flex-item">
-        <image src="/imgs/icon/ananops.png"></image>
-      </view>
-      <view class="notify-content flex-item">
-        <text class="notify-source">Rebecca  回答了问题</text>
-        <text class="notify-title">C#如何在不覆盖原有文件的情况下直接修改某一部分的内容？</text>
-      </view>
-    </view>
+  </view>
+  <view class="ctnt0" hidden="{{currentNavtab==2 ? '' : true}}">
     <view class="notify-item flex-wrp">
       <view class="avatar flex-item">
         <image src="/imgs/icon/ananops.png"></image>
@@ -53,6 +49,5 @@
     </view>
   </view>
 
-  
-</scroll-view>
 
+</scroll-view>
