--- a/page/my/pages/aboutus/aboutus.wxml
+++ b/page/my/pages/aboutus/aboutus.wxml
@@ -1,14 +1,32 @@
-<!--page/my/pages/aboutus/aboutus.wxml-->
-<view class='container'>
-  <view class='contact-title'>
-    <text>{{aboutus}}</text>
+<!--about.wxml-->
+<view class="container">
+  <view class="header">
+    <view class="black-cover"></view>
+    <image class="logo" src="/imgs/icon/bg.png"></image>
+    <image class="title" src="/imgs/icon/title.png"></image>
   </view>
-  <view class='contact-email'>
-    <view class='title'></view>
-    <text class='address' selectable='true'>duanby@ananops.com</text>
+  <view class="content">
+    <view class="version">
+      <view class="version-title">
+        <text class="title-name">安安运维</text>
+      </view>
+    </view>
+    <view class="describe" wx:if="{{!showLog}}">
+      <text class="desc-title">简介</text>
+      <view class="desc-list">
+        <text class="desc-list-item" bindtap="goananops">官网：https://www.ananops.com</text>
+      </view>
+      <text class="desc-content">安安运维是依托于北京安全防范行业协会，由安防系统维修维护运营中心直管的互联网运营平台。安安运维平台贯彻协会为会员服务，为行业服务，为政府服务，为社会服务的理念，通过整合优势资源，为有效提升安防系统效能提供综合服务。</text>
+      <text class="desc-content">我们的使命是立足于行业协会资源，规范行业作业流程，统一行业作业标准，变革行业作业模式。</text>
+      <text class="desc-content">我们的愿景是成为安防系统效能提升综合解决方案提供商</text>
+    </view>
   </view>
-  <view class='contact-bottom'>
-    <text class='create'>Created By ananops</text> 
+  <view class="footer">
+    <view class="footer-lanshan">
+      <!-- <image src=""></image> -->
+      <text>安安运维</text>
+    </view>
+    <text>安安运维 · 北京市安全防范行业协会</text>
+    <text>Copyright @ {{year}} All Rights Reserved</text>
   </view>
-  
 </view>
