--- a/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
+++ b/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
@@ -32,13 +32,14 @@
   </view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==1 ? '' : true}}">
     <view class="page__bd">
-        <!-- <mp-cells ext-class="my-cells">
-            <mp-cell value="设备编号" footer="{{}}"></mp-cell>
-            <mp-cell value="设备名称" footer="{{}}"></mp-cell>
-            <mp-cell value="设备位置" footer="{{}}"></mp-cell>
-            <mp-cell value="报修人" footer="{{}}"></mp-cell>
-            <mp-cell value="联系电话" footer="{{}}"></mp-cell>
-        </mp-cells> -->
+        <view class="icon-box" wx:for="{{inspectionLogs}}" wx:for-item="order" wx:key="{{order.id}}" data-id="{{order.id}}">
+          <image class="icon-box-img" src="/imgs/icon/processItem.png"></image>
+          <view class="icon-box-ctn">
+            <view class="icon-box-title">当前状态</view>
+            <view class="icon-box-desc">{{order.updateTime}}</view>
+            <view class="icon-box-desc">{{order.movement}}</view>
+          </view>
+        </view>
     </view>
   </view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
