--- a/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxss
+++ b/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxss
@@ -33,3 +33,25 @@
   font-size: 28rpx;
   padding: 80rpx 0;
 }
+.icon-box{
+  margin-bottom: 6rpx;
+  padding: 0 10rpx;
+  display: flex;
+  align-items: center;
+}
+.icon-box-img{
+  margin-right: 4rpx;
+  width: 175rpx;
+  height: 175rpx;
+}
+.icon-box-ctn{
+  flex-shrink: 100;
+}
+.icon-box-title{
+  font-size: 34rpx;
+}
+.icon-box-desc{
+  margin-top: 12rpx;
+  font-size: 26rpx;
+  color: #888;
+}
