添加备品备件modal

--- a/page/home/pages/terminalUserManager/toBePay/toBePay.wxml
+++ b/page/home/pages/terminalUserManager/toBePay/toBePay.wxml
@@ -24,3 +24,6 @@
 
   <template is="bill" data="{{showBill,totalMoney}}">
   </template>
+
+  <template is="onAddSpareParts" data="{{showSpareParts,spareParts}}">
+  </template>
