--- a/page/common/modal/modal-tpl.wxml
+++ b/page/common/modal/modal-tpl.wxml
@@ -36,3 +36,31 @@
     </view>
   </view>
 </template>
+<!-- 添加备品备件-->
+<template name="onAddSpareParts">
+  <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showSpareParts}}"></view>
+  <view class="modal-dialog" wx:if="{{showSpareParts}}">
+    <view class="modal-title">添加备品备件</view>
+    <view class="modal-content">
+      <form bindsubmit="onAddSpareParts" report-submit='true' bindreset="formReset">
+        <scroll-view scroll-y="true" scroll-with-animation="true" class='scroll-view'>
+          <view class='section_gap'>
+            <view class='section__title sceneDeviceName'>选择备品备件</view>
+            <checkbox-group name="linkage">
+              <view wx:for="{{spareParts}}" wx:key="item" class="sectiongap">
+                <label>
+                  <checkbox value="{{item.id}},{{index}},{{item.manufacture}},{{item.model}},{{item.deviceType}}" />
+                  {{item.name}}
+                </label>
+              </view>
+            </checkbox-group>
+          </view>
+        </scroll-view>
+        <view class="modal-footer ">
+          <button class="btn-cancel" bindtap="onCancel" data-status="cancel ">取消</button>
+          <button formType="submit" class="btn-confirm">确定</button>
+        </view>
+      </form>
+    </view>
+  </view>
+</template>
