--- a/page/common/modal/modal-tpl.wxss
+++ b/page/common/modal/modal-tpl.wxss
@@ -98,7 +98,7 @@ input-holder {
 
 .btn-confirm {
   width: 50%;
-  color: #ec5300;
+  color: #2D4E95;
   text-align: center;
 }
 
@@ -108,7 +108,7 @@ input-holder {
 
 .sceneDeviceName{
   font-size: 45rpx;
-  color: #ec5300
+  color: #2D4E95
 }
 
 .sectiongap{
