--- a/page/my/pages/login/login.wxml
+++ b/page/my/pages/login/login.wxml
@@ -23,7 +23,7 @@
           </view>
           
           <view class="imagecode-view">
-          <image class="imageCode" src="data:image/png;charset=utf-8;base64, {{imageCode}}"></image>
+          <image class="imageCode" src="{{imageCode}}"></image>
           <view bindtap = "refreshImagecode">刷新</view>
           </view>
 
@@ -52,7 +52,7 @@
             </view>
             <view class="help-q">2、忘记密码？</view>
             <view class="help-a">
-              <text>请访问后台认证管理平台（https://ananops.com.cn）进行忘记密码操作</text>
+              <text>请访问后台认证管理平台（https://www.ananops.com）进行忘记密码操作</text>
             </view>
           </view>
         </view>
