--- a/page/home/pages/networkDetail/networkDetail.wxss
+++ b/page/home/pages/networkDetail/networkDetail.wxss
@@ -30,3 +30,24 @@
   font-size: 28rpx;
   padding: 80rpx 0;
 }
+.orderlog_view {
+  display: flex;
+  justify-content: center;
+  font-size: 35rpx;
+  margin: 21rpx;
+}
+.orderlog_time {
+  width: 200rpx;
+}
+.orderlog_content {
+  color: grey;
+  width: 400rpx;
+}
+.orderlog_content.first {
+  color: orange;
+  width: 400rpx;
+}
+.orderlog_image {
+  width: 100rpx;
+  height: 100rpx;
+}
