--- a/page/common/modal/modal-tpl.wxss
+++ b/page/common/modal/modal-tpl.wxss
@@ -21,6 +21,7 @@
   background: #f9f9f9;
   margin: -180rpx 105rpx;
   border-radius: 36rpx;
+  min-height: 300rpx;
 }
 
 .modaldialog{
@@ -107,13 +108,14 @@ input-holder {
 }
 
 .sceneDeviceName{
-  font-size: 45rpx;
+  font-size: 30rpx;
   color: #2D4E95
 }
 
 .sectiongap{
   margin-top:10rpx!important;
   margin-bottom: 10rpx; 
+  display: flex
 }
 
 .sceneDetail_gap{
@@ -122,3 +124,38 @@ input-holder {
   height: 86rpx;
   line-height: 86rpx;
 }
+
+.store {
+  margin: 0 10rpx 0 10rpx;
+}
+/* 
+.buy-num-box .num-box{
+     display: flex;
+}
+.buy-num-box .num-box .num-jian,
+.buy-num-box .num-box .num-input,
+.buy-num-box .num-box .num-jia{
+  width: 80rpx;
+  height: 64rpx;
+  line-height: 62rpx;
+  text-align: center;
+  border: 1px solid #eee;
+}
+.buy-num-box .num-box .num-input{
+  font-size: 28rpx;
+}
+.buy-num-box .num-box .num-input input{
+  height: 100%;
+}
+.popup-join-btn{
+  width: 100%;
+  height: 89rpx;
+  text-align: center;
+  line-height: 89rpx;
+  font-size:34rpx;
+  color:#ffffff;
+  background-color: #e64340;
+}
+.buy-num-box .num-box .hui{
+  background-color: #f5f5f9;
+} */
