--- a/page/home/pages/serviceEngineer/repairingOrderDetail/repairingOrderDetail.wxml
+++ b/page/home/pages/serviceEngineer/repairingOrderDetail/repairingOrderDetail.wxml
@@ -1,3 +1,4 @@
+<import src="../../../../common/modal/modal-tpl.wxml" />
 <!-- 顶部tabbar -->
 <view class="top-tab flex-wrp flex-tab ">
   <view class="toptab flex-item {{currentNavtab==idx ? 'active' : ''}}" wx:for="{{navTab}}" wx:key="itemName" wx:for-index="idx" wx:for-item="itemName" data-idx="{{idx}}" bindtap="switchTab">
@@ -32,57 +33,20 @@
       <mp-cells ext-class="my-cells">
         <mp-cell value="服务商" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
         <mp-cell value="维修工" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
-        <mp-cell value="维修建议" footer="{{orderInfo.suggestion}}" bindtap="chooseSuggestion">
-          {{orderInfo.suggestion}}
+        <mp-cell value="维修建议" footer="{{suggestionOne}}" bindtap="chooseSuggestion">
+          {{suggestionOne}}
+        </mp-cell>
+        <mp-cell value="备品备件" footer="{{}}" bindtap="onAddSpareParts">
+
         </mp-cell>
 
-                <modal id="modal" hidden="{{hiddenmodalput}}" title="维修建议" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm">
-          <textarea placeholder="请输入维修建议" bindinput="suggestion" value="{{suggestion}}"></textarea>
+        <modal id="modal" hidden="{{hiddenmodalput}}" title="维修建议" confirm-text="提交" cancel-text="取消" bindcancel="cancel" bindconfirm="confirm">
+          <textarea placeholder="请输入维修建议" bindinput="suggestion" value="{{orderInfo.suggestion}}"></textarea>
         </modal>
-
-        <!-- <view class="page-section">
-            <view class="weui-cells weui-cells_after-title">
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">故障描述</view>
-                </view>
-                <view class="weui-cell__bd" bindtap="chooseDescribe">
-                  <view wx:if="{{describe}}" class="weui-input">{{describe}}</view>
-                  <view wx:else class="weui-input">{{textContent}}</view>
-                </view>
-              </view>
-            </view>
-          </view> -->
-
-        <mp-cell value="备品备件" footer="{{orderInfo.result}}">
-          <view class="page-section">
-            <view class="weui-cells weui-cells_after-title">
-              <view class="weui-cell weui-cell_input">
-                <view class="weui-cell__hd">
-                  <view class="weui-label">故障描述</view>
-                </view>
-                <view class="weui-cell__bd" bindtap="chooseDescribe">
-                  <view wx:if="{{describe}}" class="weui-input">{{describe}}</view>
-                  <view wx:else class="weui-input">{{textContent}}</view>
-                </view>
-              </view>
-            </view>
-          </view>
-        </mp-cell>
       </mp-cells>
     </view>
   </view>
-  <!-- <view class="ctnt2 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
-    <view class="page__bd">
-      <mp-cells ext-class="my-cells">
-        <mp-cell value="单据状态" footer="{{}}"></mp-cell>
-        <mp-cell value="报修单号" footer="{{}}"></mp-cell>
-        <mp-cell value="审核人" footer="{{}}"></mp-cell>
-        <mp-cell value="审核意见" footer="{{}}"></mp-cell>
-        <mp-cell value="维修人员" footer="{{}}"></mp-cell>
-        <mp-cell value="计划时间" footer="{{}}"></mp-cell>
-        <mp-cell value="处理意见" footer="{{}}"></mp-cell>
-      </mp-cells>
-    </view>
-  </view> -->
 </view>
+
+<template is="onAddSpareParts" data="{{showSpareParts,deviceOrderCount,deviceOrderList,allDevices}}">
+</template>
