--- a/page/home/pages/terminalUserManager/toBePayDetail/toBePayDetail.wxml
+++ b/page/home/pages/terminalUserManager/toBePayDetail/toBePayDetail.wxml
@@ -41,7 +41,15 @@
   </view>
 </view>
 
-<view class="ctnt3 placehold" hidden="{{currentNavtab==3 ? '' : true}}">
+<view class="placehold" hidden="{{currentNavtab==3 ? '' : true}}">
+  <view wx:for="{{orderLogs}}" wx:key="item" class="orderlog_view">
+    <view class="orderlog_time">{{item.createdTime}}</view>
+    <image class="orderlog_image" src="{{index == 0?'/imgs/others/progress_first.png':'/imgs/others/progress.png'}}"></image>
+    <view class="orderlog_content {{index==0?'first':''}}">{{workOrderStatus[item.status]}},{{item.lastOperator}}</view>
+  </view>
+</view>
+
+<view class="ctnt3 placehold" hidden="{{currentNavtab==4 ? '' : true}}">
   <view class="page__bd">
     <mp-cells ext-class="my-cells">
       <mp-cell value="备品备件" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
