--- a/app.wxss
+++ b/app.wxss
@@ -530,3 +530,34 @@ input {
   text-align: center;
   margin: 5rpx;
 }
+
+.orderlog_view {
+  display: flex;
+  justify-content: center;
+  font-size: 35rpx;
+  margin: 21rpx;
+}
+
+.orderlog_time {
+  width: 30%;
+}
+
+.orderlog_content {
+  color: grey;
+  
+}
+
+.orderlog_content.first {
+  color: orange;
+}
+
+.orderlog_image {
+  width: 100rpx;
+  height: 100rpx;
+}
+
+
+.line{
+margin: 0 auto;
+background-color: #D8D8D8;
+}
