--- a/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxss
+++ b/page/home/pages/terminalUser/repairingOrderDetail/repairingOrderDetail.wxss
@@ -1,9 +1,5 @@
 @import '../../../../common/lib/common.wxss';
-@import '../../../../common/modal/modal-tpl.wxss'
-
-.container {
-  height: 1500rpx;
-}
+@import '../../../../common/modal/modal-tpl.wxss';
 
 .top-tab {
   width: 750rpx;
@@ -35,35 +31,4 @@
 .placehold {
   font-size: 28rpx;
   padding: 80rpx 0;
-}
-
-.orderlog_view {
-  display: flex;
-  justify-content: center;
-  font-size: 35rpx;
-  margin: 21rpx;
-}
-
-.orderlog_time {
-  width: 200rpx;
-}
-
-.orderlog_content {
-  color: grey;
-  
-}
-
-.orderlog_content.first {
-  color: orange;
-}
-
-.orderlog_image {
-  width: 100rpx;
-  height: 100rpx;
-}
-
-
-.line{
-margin: 0 auto;
-background-color: #D8D8D8;
 }
