--- a/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
+++ b/page/home/pages/terminalUser/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
@@ -30,17 +30,13 @@
     </mp-cells>
   </view>
 </view>
-<view class="ctnt2 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
-  <view class="page__bd">
-    <mp-cells ext-class="my-cells">
-      <mp-cell value="报修单号" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
-      <mp-cell value="单据状态" footer="{{workOrderStatus[orderInfo.status]}}">{{workOrderStatus[orderInfo.status]}}</mp-cell>
-      <mp-cell value="审核人" footer="{{}}"></mp-cell>
-      <mp-cell value="审核意见" footer="{{}}"></mp-cell>
-      <mp-cell value="维修人员" footer="{{orderInfo.maintainerId}}">{{orderInfo.maintainerId}}</mp-cell>
-    </mp-cells>
+  <view class="placehold" hidden="{{currentNavtab==2 ? '' : true}}">
+    <view wx:for="{{orderLogs}}" wx:key="item" class="orderlog_view">
+      <view class="orderlog_time">{{item.createdTime}}</view>
+      <image class="orderlog_image" src="{{index == 0?'/imgs/others/progress_first.png':'/imgs/others/progress.png'}}"></image>
+      <view class="orderlog_content {{index==0?'first':''}}">{{workOrderStatus[item.status]}},{{item.lastOperator}}</view>
+    </view>
   </view>
-</view>
 
 
 <!-- 
