--- a/page/home/pages/serviceEngineer/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
+++ b/page/home/pages/serviceEngineer/toBeConfirmOrderDetail/toBeConfirmOrderDetail.wxml
@@ -24,6 +24,7 @@
       <mp-cell value="故障等级" footer="{{}}"></mp-cell>
       <mp-cell value="故障类别" footer="{{}}"></mp-cell>
       <mp-cell value="故障描述" footer="{{}}"></mp-cell>
+       <mp-cell value="故障位置" footer="{{orderInfo.address_name}}">{{orderInfo.address_name}}</mp-cell>
       <mp-cell value="预约时间" footer="{{orderInfo.appointTime}}">{{orderInfo.appointTime}}</mp-cell>
       <mp-cell value="报修人" footer="{{orderInfo.userId}}">{{orderInfo.userId}}</mp-cell>
       <mp-cell value="联系电话" footer="{{orderInfo.call}}" bindtap="makePhone" data-phone="{{orderInfo.call}}">{{orderInfo.call}}</mp-cell>
