--- a/page/home/pages/terminalUserManager/toBePayDetail/toBePayDetail.wxml
+++ b/page/home/pages/terminalUserManager/toBePayDetail/toBePayDetail.wxml
@@ -24,18 +24,21 @@
       <mp-cell value="故障等级" footer="{{}}"></mp-cell>
       <mp-cell value="故障类别" footer="{{}}"></mp-cell>
       <mp-cell value="故障描述" footer="{{}}"></mp-cell>
+      <mp-cell value="故障位置" footer="{{}}"></mp-cell>
       <mp-cell value="预约时间" footer="{{orderInfo.appointTime}}">{{orderInfo.appointTime}}</mp-cell>
       <mp-cell value="报修人" footer="{{orderInfo.userId}}">{{orderInfo.userId}}</mp-cell>
       <mp-cell value="联系电话" footer="{{orderInfo.call}}" bindtap="makePhone" data-phone="{{orderInfo.call}}">{{orderInfo.call}}</mp-cell>
     </mp-cells>
   </view>
 </view>
+
 <view class="ctnt2 placehold" hidden="{{currentNavtab==2 ? '' : true}}">
   <view class="page__bd">
     <mp-cells ext-class="my-cells">
       <mp-cell value="服务商" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
       <mp-cell value="维修工" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
       <mp-cell value="维修建议" footer="{{orderInfo.suggestion}}">{{orderInfo.suggestion}}</mp-cell>
+      <mp-cell value="备品备件" footer=""></mp-cell>
       <mp-cell value="维修结果" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
     </mp-cells>
   </view>
@@ -46,17 +49,6 @@
     <view class="orderlog_time">{{item.createdTime}}</view>
     <image class="orderlog_image" src="{{index == 0?'/imgs/others/progress_first.png':'/imgs/others/progress.png'}}"></image>
     <view class="orderlog_content {{index==0?'first':''}}">{{workOrderStatus[item.status]}},{{item.lastOperator}}</view>
-  </view>
-</view>
-
-<view class="ctnt3 placehold" hidden="{{currentNavtab==4 ? '' : true}}">
-  <view class="page__bd">
-    <mp-cells ext-class="my-cells">
-      <mp-cell value="备品备件" footer="{{orderInfo.facilitatorId}}">{{orderInfo.facilitatorId}}</mp-cell>
-      <mp-cell value="备品备件" footer="{{orderInfo.id}}">{{orderInfo.id}}</mp-cell>
-      <mp-cell value="备品备件" footer="{{orderInfo.suggestion}}">{{orderInfo.suggestion}}</mp-cell>
-      <mp-cell value="备品备件" footer="{{orderInfo.result}}">{{orderInfo.result}}</mp-cell>
-    </mp-cells>
   </view>
 </view>
 
