--- a/page/home/pages/terminalUser/toBeConfirm/toBeConfirm.wxml
+++ b/page/home/pages/terminalUser/toBeConfirm/toBeConfirm.wxml
@@ -7,10 +7,10 @@
           <view slot="title" class="mp-cell-title">
             <image src="../../../../../imgs/icon/to_be_confirmed.png" class="mp-cell-image" />
           </view>
-          <view>{{order.programName}}</view>
+          <view>项目:{{order.projectId}}</view>
           <view>{{order.deviceName}}</view>
           <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
-          <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
+          <view class="mp-cell-view">报修时间:{{order.updateTime}}</view>
         </mp-cell>
       </mp-cells>
     </scroll-view>
