--- a/page/home/pages/terminalUserManager/toBeConfirm/toBeConfirm.wxml
+++ b/page/home/pages/terminalUserManager/toBeConfirm/toBeConfirm.wxml
@@ -12,8 +12,8 @@
           <view class="mp-cell-view">设备位置:{{order.address_name}}</view>
           <view class="mp-cell-view">报修时间:{{order.appointTime}}</view>
           <view class="operation_view">
-            <view class="operation_button" catchtap="pass" data-id="{{order.id}}">通过</view>
-            <view class="operation_button" catchtap="reject" data-id="{{order.id}}">驳回</view>
+            <view class="operation_button" catchtap="pass" data-id="{{order.id}}" data-status="{{order.status}}">通过</view>
+            <view class="operation_button" catchtap="reject" data-id="{{order.id}}" data-status="{{order.status}}">驳回</view>
           </view>
         </mp-cell>
       </mp-cells>
